update filter incomes