@@ -6,20 +6,26 @@ import com.wallet.wallet.api.service.IUserService;
 import com.wallet.wallet.api.service.generic.GenericServiceImpl;
 import com.wallet.wallet.domain.dto.request.IncomeRequestDto;
 import com.wallet.wallet.domain.dto.request.IncomeUpdateDto;
+import com.wallet.wallet.domain.dto.response.ExpenseResponseDto;
 import com.wallet.wallet.domain.dto.response.IncomeResponseDto;
+import com.wallet.wallet.domain.enums.EIncome;
 import com.wallet.wallet.domain.mapper.IMapper;
 import com.wallet.wallet.domain.mapper.IncomeMapper;
+import com.wallet.wallet.domain.model.Expense;
 import com.wallet.wallet.domain.model.Income;
 import com.wallet.wallet.domain.model.User;
 import com.wallet.wallet.domain.repository.IIncomeRepository;
 
-import com.wallet.wallet.handler.exeption.UserUnauthorizedException;
+import com.wallet.wallet.handler.exception.UserUnauthorizedException;
 import lombok.AllArgsConstructor;
 
 import org.springframework.context.MessageSource;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
@@ -34,9 +40,7 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
     private final IIncomeRepository repository;
     private final IncomeMapper mapper;
     private final IUserService userService;
-
     private final JwtUtil jwtUtil;
-
     private final MessageSource messenger;
 
     @Override
@@ -50,7 +54,6 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
     public IncomeResponseDto update(IncomeUpdateDto incomeUpdateDto, Long id, String token) {
 
         Long userId = jwtUtil.extractUserId(token);
-
         Optional<Income> income = repository.findById(id);
 
         if (userId.equals(income.get().getUser().getId())) {
@@ -68,6 +71,7 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
 
     @Override
     public IncomeResponseDto findById(Long Id){
+
         return mapper.entityToResponseDto(repository.findById(Id).get());
     }
 
@@ -77,7 +81,7 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
         return repository.findAll()
                 .stream()
                 .map(mapper::entityToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -88,7 +92,7 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
         return convertIncome(repository.getAllByUserId(userId), user.getCurrency().getCodeCurrency(), user.getCurrency().getValueDollar())
                 .stream()
                 .map(mapper::entityToResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Double getBalanceMonthlyByUserId(List<Income> incomes) {
@@ -118,7 +122,37 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
         return balance;
     }
 
-    //genérico
+
+    @Override
+    public List<IncomeResponseDto> filter(String token, EIncome type, Double amountMin, Double amountMax, LocalDate start, LocalDate end, String orderBy, String order) {
+
+        Long userId = jwtUtil.extractUserId(token);
+        User user = userService.getById(userId);
+        String userCodeCurrency = user.getCurrency().getCodeCurrency();
+        Double userValueCurrency = user.getCurrency().getValueDollar();
+
+        List<Income> incomes = new ArrayList<>();
+
+        if(type != null && start != null && end != null && amountMin != null && amountMax != null){
+            incomes = convertIncome(repository.filterByCategoriesAndDateAndAmount(userId, type, start, end, amountMin, amountMax, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(type != null && start != null && end != null){
+            incomes = convertIncome(repository.filterByCategoriesAndDate(userId, type, start, end, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(type != null && amountMin != null && amountMax != null){
+            incomes = convertIncome(repository.filterByCategoriesAndAmount(userId, type, amountMin, amountMax, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(start != null && end != null && amountMin != null && amountMax != null){
+            incomes = convertIncome(repository.filterByDateAndAmount(userId, start, end, amountMin, amountMax, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(type != null){
+            incomes = convertIncome(repository.filterByCategories(userId, type, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(start != null && end != null){
+            incomes = convertIncome(repository.filterByDate(userId, start, end, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        } else if(amountMin != null && amountMax != null) {
+            incomes = convertIncome(repository.filterByAmount(userId, amountMin, amountMax, Sort.by(order.equals("ASC") ? Sort.Direction.ASC : Sort.Direction.DESC, orderBy)), userCodeCurrency, userValueCurrency);
+        }
+
+        return incomes.stream().map(mapper::entityToResponseDto).toList();
+    }
+
+
     public Double formatDecimals(Double number, Integer decimals) {
         return Math.round(number * Math.pow(10, decimals)) / Math.pow(10, decimals);
     }
@@ -137,8 +171,19 @@ public class IncomeServiceImpl extends GenericServiceImpl<Income, IncomeResponse
         return incomes;
     }
 
-    public void delete(Long id){
-        super.delete(id);
+    @Override
+    public void delete(Long id, String token){
+
+        Long userId = jwtUtil.extractUserId(token);
+
+        Optional<Income> income = repository.findById(id);
+
+        if (userId.equals(income.get().getUser().getId())) {
+            super.delete(id);
+        } else {
+            throw new UserUnauthorizedException(messenger.getMessage(USER_UNAUTHORIZED.name(),
+                    new Object[]{userId, income.get().getUser().getId()}, Locale.getDefault()));
+        }
     }
 
     @Override
